# bleu

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
app/: manage.py
app/accounts/: urls.py  views.py
app/accounts/templates/accounts/: login.html  logout.html
app/bleu/: asgi.py  settings.py  urls.py  wsgi.py
app/blog/: admin.py  forms.py  models.py  urls.py  views.py
app/blog/migrations/: 0001_initial.py  0002_alter_post_comments_alter_post_posts.py
app/blog/templates/: post_list.html
app/blog/templates/blog/: base.html  post_delete.html  post_detail.html  post_edit.html  post_list.html  post_new.html
docker/: docker-compose.yaml
