[tool.poetry]
name = "bleu"
version = "0.0.1"
description = "Le grand bleu"
authors = ["aqua <aqua@fiaa.net>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.4.0"
django = "^4.2.5"
django-extensions = "^3.2.3"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
