[tool.poetry]
name = "bleu"
version = "0.0.1"
description = "Le grand bleu"
authors = ["aqua <aqua@fiaa.net>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
django-extensions = "^3.2.3"
django-environ = "^0.11.2"
ipython = "^8.16.1"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.4"}
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[tool.flake8]
import-order-style = "pycharm"
max-line-length = 120

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 120

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
#python_version = "^3.11"
#strict = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true

[tool.django-stubs]
django_version = "^4.2.5"
django_apps = ["blog"]
django_settings_module = "app.bleu.settings"
ignore_missing_settings = true
ignore_missing_model_attributes = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
